--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.5",
     "react-popper": "1.3.6",
     "react-redux": "7.2.0",
     "react-redux-form": "1.16.14",
