--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
     "node-sass": "^5.0.0",
+    "prop-types": "15.7.2",
     "react": "^17.0.1",
+    "react-animation-components": "3.0.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
     "react-popper": "1.3.6",
@@ -18,6 +20,7 @@
     "react-redux-form": "1.16.14",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "4.4.1",
     "reactstrap": "8.5.1",
     "redux": "4.0.5",
     "web-vitals": "^1.0.1"
